--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <h1>JavaScript First Assignment</h1>
     <nav>
-        <a href="ALERTS Chapter 01/index.html">ALERTS Chapter 01 Assignment</a>
+        <a href="Alerts Chapter 01/index.html">Alerts Chapter 01 Assignment</a>
         <a href="VARIABLES FOR STRINGS Chapter 02/index.html">VARIABLES FOR STRINGS Chapter 02 Assignment</a>
         <a href="VARIABLES FOR NUMBERS Chapter 03/index.html">VARIABLES FOR NUMBERS Chapter 03 Assignment</a>
         <a href="VARIABLE NAMES LEGAL & ILLEGAL Chapter 04/index.html">VARIABLE NAMES LEGAL & ILLEGAL Chapter 04 Assignment</a>
         <a href="MATH EXPRESSIONS Chapter 05/index.html">MATH EXPRESSIONS Chapter 05 Assignment</a>
     </nav>  
 </body>
+
 </html>
